创建Web页面布局

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 
 <script type="text/javascript">
 	$(function() {
-	//	$.messager.alert('Hello','Hello World');    
+		$.messager.alert('Hello','Hello World');    
 	});
 </script>
 
